--- a/map_eng.html
+++ b/map_eng.html
@@ -79,7 +79,7 @@
         }
 
         function style_gadmap_0_0(feature) {
-            if (feature.properties[ "village"  ] >= 511.000000 && feature.properties[ "village"  ] <= 511.000000 ) {
+            if (feature.properties[ "ST"  ] == "Ayeyarwady" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -90,10 +90,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(206,255,201,1.0)' ,
+                fillColor: 'rgba(252,243,179,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 511.000000 && feature.properties[ "village"  ] <= 796.000000 ) {
+            if (feature.properties[ "ST"  ] == "Bago" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -104,10 +104,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(255,214,240,1.0)' ,
+                fillColor: 'rgba(184,252,244,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 796.000000 && feature.properties[ "village"  ] <= 1149.000000 ) {
+            if (feature.properties[ "ST"  ] == "Kachin" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -118,10 +118,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(201,252,249,1.0)' ,
+                fillColor: 'rgba(207,252,218,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 1149.000000 && feature.properties[ "village"  ] <= 1233.000000 ) {
+            if (feature.properties[ "ST"  ] == "Kayah" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -132,10 +132,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(252,194,200,1.0)' ,
+                fillColor: 'rgba(189,214,252,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 1233.000000 && feature.properties[ "village"  ] <= 1364.000000 ) {
+            if (feature.properties[ "ST"  ] == "Kayin" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -146,10 +146,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(255,248,186,1.0)' ,
+                fillColor: 'rgba(252,217,212,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 1364.000000 && feature.properties[ "village"  ] <= 2063.000000 ) {
+            if (feature.properties[ "ST"  ] == "Chin" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -160,10 +160,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(195,255,188,1.0)' ,
+                fillColor: 'rgba(215,238,252,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 2063.000000 && feature.properties[ "village"  ] <= 2129.000000 ) {
+            if (feature.properties[ "ST"  ] == "Mon" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -174,10 +174,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(209,249,252,1.0)' ,
+                fillColor: 'rgba(250,212,252,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 2129.000000 && feature.properties[ "village"  ] <= 2553.000000 ) {
+            if (feature.properties[ "ST"  ] == "Rakhine" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -188,10 +188,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(206,188,255,1.0)' ,
+                fillColor: 'rgba(252,184,226,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 2553.000000 && feature.properties[ "village"  ] <= 3761.000000 ) {
+            if (feature.properties[ "ST"  ] == "Shan" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -202,10 +202,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(255,204,238,1.0)' ,
+                fillColor: 'rgba(182,252,191,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 3761.000000 && feature.properties[ "village"  ] <= 4771.000000 ) {
+            if (feature.properties[ "ST"  ]== "Tanintharyi" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -216,10 +216,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(238,212,252,1.0)' ,
+                fillColor: 'rgba(243,179,252,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 4771.000000 && feature.properties[ "village"  ] <= 4779.000000 ) {
+            if (feature.properties[ "ST"  ] == "Sagaing" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -230,10 +230,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(191,193,255,1.0)' ,
+                fillColor: 'rgba(242,252,215,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 4779.000000 && feature.properties[ "village"  ] <= 5740.000000 ) {
+            if (feature.properties[ "ST"  ] == "Magway" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -244,10 +244,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(183,255,214,1.0)' ,
+                fillColor: 'rgba(252,185,184,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 5740.000000 && feature.properties[ "village"  ] <= 6494.000000 ) {
+            if (feature.properties[ "ST"  ] == "Mandalay" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -258,10 +258,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(201,255,252,1.0)' ,
+                fillColor: 'rgba(252,215,179,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 6494.000000 && feature.properties[ "village"  ] <= 10896.000000 ) {
+            if (feature.properties[ "ST"  ] == "Nay Pyi Taw" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -272,10 +272,10 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(237,252,179,1.0)' ,
+                fillColor: 'rgba(203,187,252,1.0)' ,
             }
             }
-            if (feature.properties[ "village"  ] >= 10896.000000 && feature.properties[ "village"  ] <= 11908.000000 ) {
+            if (feature.properties[ "ST"  ] == "Yangon" ) {
                 return {
                 pane: 'pane_gadmap_0',
                 opacity: 1,
@@ -286,7 +286,7 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(200,191,188,1.0)' ,
+                fillColor: 'rgba(226,252,184,1.0)' ,
             }
             }
         }
